added nimby/abducted page. updated project sulphur page

--- a/project/clouded/index.html
+++ b/project/clouded/index.html
@@ -267,7 +267,7 @@
 
         <div>
             <h2>Summary</h2>
-            clouded is a 2 week long project build using the HTC vive. the game revolves around manipulating clouds in order to manage the world state untill the specific conditions are met. the game was build using unity3D with a team of 2 programmers, 3 artists and 3 designers
+            Clouded is a 2 week long project build using the HTC vive. The game revolves around manipulating clouds in order to manage the world state untill the specific conditions are met. The game was build using unity3D using the htc vive.
             
         </div>
         <div class="container">
