fixed download links

--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
                         <div class="card-desription test">
                             
                             <p>
-                                AGR is a anti-grav racing game build with the custom Voodoo Engine. The engine was tailored to handle anti-gra racing games specifically and uses maya as a level-editor combined with houdini tools to streamline the development of new racing tracks. It is also cross platform (PC / PS4) <br><br>
+                                AGR is an anti-grav racing game build with the custom Voodoo Engine. The engine was tailored to handle anti-grav racing games specifically and uses maya as a level-editor combined with houdini tools to streamline the development of new racing tracks. It is also cross platform (PC / PS4) <br><br>
                                 04-27-2016
                             </p>
                             
