--- a/project/abduckted/index.html
+++ b/project/abduckted/index.html
@@ -370,7 +370,7 @@ into the scene and check against the grid.</p>
 
         <p class="project-download">
             
-            <a href="/builds/Abduckted.zip" class="btn btn-primary btn-outline" download="">
+            <a href="https://github.com/StanPepels/StanPepels.github.io/blob/master/builds/Abduckted.zip?raw=true" class="btn btn-primary btn-outline">
                 Download
             </a>
             
