--- a/project/clouded/index.html
+++ b/project/clouded/index.html
@@ -382,7 +382,7 @@ some intuitive controls to menus that did not require any pointing a laser at a 
 
         <p class="project-download">
             
-            <a href="/test" class="btn btn-primary btn-outline" download="">
+            <a href="https://github.com/StanPepels/StanPepels.github.io/blob/master/test?raw=true" class="btn btn-primary btn-outline">
                 Download
             </a>
             
