--- a/project/dear-father/index.html
+++ b/project/dear-father/index.html
@@ -392,7 +392,7 @@ left most node. This process would then be repeated to build the entire dialogue
 
         <p class="project-download">
             
-            <a href="/builds/DearFather.zip" class="btn btn-primary btn-outline" download="">
+            <a href="https://github.com/StanPepels/StanPepels.github.io/blob/master/builds/DearFather.zip?raw=true" class="btn btn-primary btn-outline">
                 Download
             </a>
             
