--- a/project/nimby/index.html
+++ b/project/nimby/index.html
@@ -378,7 +378,7 @@ to the leaf the higher the magnitude of the force. A random rotation was also ap
 
         <p class="project-download">
             
-            <a href="/builds/Nimby.zip" class="btn btn-primary btn-outline" download="">
+            <a href="https://github.com/StanPepels/StanPepels.github.io/blob/master/builds/Nimby.zip?raw=true" class="btn btn-primary btn-outline">
                 Download
             </a>
             
