--- a/project/orbis/index.html
+++ b/project/orbis/index.html
@@ -389,7 +389,7 @@ I would determain the total amount of force used to bumb the other player away. 
 
         <p class="project-download">
             
-            <a href="/builds/Orbis.zip" class="btn btn-primary btn-outline" download="">
+            <a href="https://github.com/StanPepels/StanPepels.github.io/blob/master/builds/Orbis.zip?raw=true" class="btn btn-primary btn-outline">
                 Download
             </a>
             
