--- a/project/agr/index.html
+++ b/project/agr/index.html
@@ -288,7 +288,7 @@
 
         <div>
             <h2>Summary</h2>
-            AGR is a anti-grav racing game build with the custom Voodoo Engine. The engine was tailored to handle anti-gra racing games specifically and uses maya as a level-editor combined with houdini tools to streamline the development of new racing tracks. It is also cross platform (PC / PS4)
+            AGR is an anti-grav racing game build with the custom Voodoo Engine. The engine was tailored to handle anti-grav racing games specifically and uses maya as a level-editor combined with houdini tools to streamline the development of new racing tracks. It is also cross platform (PC / PS4)
             
         </div>
         <div class="container">
