--- a/404.html
+++ b/404.html
@@ -47,8 +47,8 @@
   
 
   
-  <link rel="alternate" href="/index.xml" type="application/rss+xml" title="Stan Pepels">
-  <link rel="feed" href="/index.xml" type="application/rss+xml" title="Stan Pepels">
+  <link rel="alternate" href="https://stanpepels.github.io/index.xml" type="application/rss+xml" title="Stan Pepels">
+  <link rel="feed" href="https://stanpepels.github.io/index.xml" type="application/rss+xml" title="Stan Pepels">
   
 
   <link rel="manifest" href="/site.webmanifest">
@@ -186,15 +186,15 @@
   <h2>Blog posts</h2>
   
   <ul>
-    <li><a href="/post/tools-framework/">Choosing a framework for tool development</a></li>
+    <li><a href="https://stanpepels.github.io/post/tools-framework/">Choosing a framework for tool development</a></li>
   </ul>
   
   <ul>
-    <li><a href="/post/custom-physics/">Custom Physics</a></li>
+    <li><a href="https://stanpepels.github.io/post/custom-physics/">Custom Physics</a></li>
   </ul>
   
   <ul>
-    <li><a href="/post/tools-for-fools/">Tools for fools</a></li>
+    <li><a href="https://stanpepels.github.io/post/tools-for-fools/">Tools for fools</a></li>
   </ul>
   
   
@@ -210,23 +210,23 @@
   <h2>Projects</h2>
   
   <ul>
-    <li><a href="/project/clouded/">clouded</a></li>
+    <li><a href="https://stanpepels.github.io/project/clouded/">clouded</a></li>
   </ul>
   
   <ul>
-    <li><a href="/project/agr/">AGR</a></li>
+    <li><a href="https://stanpepels.github.io/project/project-sulphur/">project sulphur</a></li>
   </ul>
   
   <ul>
-    <li><a href="/project/project-sulphur/">project sulphur</a></li>
+    <li><a href="https://stanpepels.github.io/project/agr/">AGR</a></li>
   </ul>
   
   <ul>
-    <li><a href="/project/abduckted/">AbDuckTed</a></li>
+    <li><a href="https://stanpepels.github.io/project/abduckted/">AbDuckTed</a></li>
   </ul>
   
   <ul>
-    <li><a href="/project/nimby/">NIMBY</a></li>
+    <li><a href="https://stanpepels.github.io/project/nimby/">NIMBY</a></li>
   </ul>
   
   
