--- a/about/index.html
+++ b/about/index.html
@@ -13,7 +13,7 @@
   <meta name="description" content="Game Tools / Engine programmer">
 
   
-  <link rel="alternate" hreflang="en-us" href="/about/">
+  <link rel="alternate" hreflang="en-us" href="https://stanpepels.github.io/about/">
 
   
   
@@ -49,20 +49,20 @@
   
 
   
-  <link rel="alternate" href="/about/index.xml" type="application/rss+xml" title="Stan Pepels">
-  <link rel="feed" href="/about/index.xml" type="application/rss+xml" title="Stan Pepels">
+  <link rel="alternate" href="https://stanpepels.github.io/about/index.xml" type="application/rss+xml" title="Stan Pepels">
+  <link rel="feed" href="https://stanpepels.github.io/about/index.xml" type="application/rss+xml" title="Stan Pepels">
   
 
   <link rel="manifest" href="/site.webmanifest">
   <link rel="icon" type="image/png" href="/img/icon.png">
   <link rel="apple-touch-icon" type="image/png" href="/img/icon-192.png">
 
-  <link rel="canonical" href="/about/">
+  <link rel="canonical" href="https://stanpepels.github.io/about/">
 
   <meta property="twitter:card" content="summary_large_image">
   
   <meta property="og:site_name" content="Stan Pepels">
-  <meta property="og:url" content="/about/">
+  <meta property="og:url" content="https://stanpepels.github.io/about/">
   <meta property="og:title" content=" | Stan Pepels">
   <meta property="og:description" content="Game Tools / Engine programmer">
   <meta property="og:locale" content="en-us">
