--- a/404.html
+++ b/404.html
@@ -210,15 +210,15 @@
   <h2>Projects</h2>
   
   <ul>
-    <li><a href="https://stanpepels.github.io/project/clouded/">clouded</a></li>
-  </ul>
-  
-  <ul>
     <li><a href="https://stanpepels.github.io/project/project-sulphur/">project sulphur</a></li>
   </ul>
   
   <ul>
     <li><a href="https://stanpepels.github.io/project/agr/">AGR</a></li>
+  </ul>
+  
+  <ul>
+    <li><a href="https://stanpepels.github.io/project/age-of-wonders-planetfall/">Age of wonders Planetfall</a></li>
   </ul>
   
   <ul>
