updated about section

--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@ Therefor I always emphesize user usage in my work.</p>
 
 <p>On this page you can find the projects I&rsquo;ve worked on so far. They range from game-jam sized projects to projects that use a custom engine build from scratch.</p>
 
-<p>Currently I&rsquo;m a final year student at BUAS IGAD doing a year long internship at Triumph Studios. I&rsquo;m currently looking for a job as a Tools / engine programmer starting post graduation.</p>
+<p>Currently I&rsquo;m currently employed as a tools programmer at Vertigo Games.</p>
 
 
     <div class="row">
